--- a/notebook/peoplenet-demo.ipynb
+++ b/notebook/peoplenet-demo.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd samples/configs/tlt_pretrained_models && \\\n",
+    "!cd ../../samples/configs/tlt_pretrained_models && \\\n",
     "    mkdir -p ../../models/tlt_pretrained_models/peoplenet && \\\n",
     "    wget https://api.ngc.nvidia.com/v2/models/nvidia/tlt_peoplenet/versions/pruned_v2.0/files/resnet34_peoplenet_pruned.etlt \\\n",
     "    -O ../../models/tlt_pretrained_models/peoplenet/resnet34_peoplenet_pruned.etlt"
@@ -42,7 +42,7 @@
    "id": "08675ec2",
    "metadata": {},
    "source": [
-    "### Verify model files"
+    "Verify model files"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls -l samples/models/tlt_pretrained_models"
+    "ls -l ../../samples/models/tlt_pretrained_models"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "id": "b4259d5b",
    "metadata": {},
    "source": [
-    "## 2. 4K Stream source"
+    "## 2. Source configurations"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "You can select 1) RTSP or 2) prepared videos in the container to run inference on with DeepStream.\n",
     "Refer to https://docs.nvidia.com/metropolis/deepstream/dev-guide/text/DS_ref_app_deepstream.html#source-group for more details.\n",
     "\n",
-    "Configure source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt."
+    "Configure source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "cat ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "id": "9422150e",
    "metadata": {},
    "source": [
-    "\n",
+    "Expected source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt:\n",
     "- set type=4\n",
     "\n",
     "- set uri=rtsp://\\<ip>:\\<host>/path      \n"
@@ -108,9 +108,7 @@
    "id": "ce63da96",
    "metadata": {},
    "source": [
-    "You may also use our prepared container to simulate RTSP source: \n",
-    "\n",
-    "Open another terminal from your local machine, and pull the container\n"
+    "You may also create another DeepStream Container to simulate RTSP source. Please refer to deepstream-rtsp-out.ipynb"
    ]
   },
   {
@@ -123,21 +121,114 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c97bfb74",
+   "id": "d645e58e",
    "metadata": {},
    "source": [
-    "- set type=3\n",
-    "\n",
-    "- set uri=../../../video-src/\\<video_file>\n"
+    "Create video source folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccdd1980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir ../../video-src"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23b41384",
+   "id": "a250ed47",
    "metadata": {},
    "source": [
-    "We prepared two 4K videos in v9 format with webm extension, select either one of them as your video_file\n",
-    "sample video files options: 1) hk_landscape_vp9.webm or 2) hk_sunset_vp9.webm"
+    "You may download 4K videos from YouTube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b32dabb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install youtube-dl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c66e6ac0",
+   "metadata": {},
+   "source": [
+    "In this demo, we choose 2 4K videos which shot amazing street views in Hong Kong\n",
+    "- https://www.youtube.com/watch?v=gYO1uk7vIcc\n",
+    "- https://www.youtube.com/watch?v=V8nBZbbJePs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ef56bc",
+   "metadata": {},
+   "source": [
+    "To check the formats for those videos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b14523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!youtube-dl -F https://www.youtube.com/watch?v=V8nBZbbJePs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6e07bd5",
+   "metadata": {},
+   "source": [
+    "We will download vp9 formatted 4K video (313) as av01 formatted video is not supported on DeepStream."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a75f04ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd ../../video-src && \\\n",
+    "    youtube-dl -f 313 -o hk_4k.webm https://www.youtube.com/watch?v=V8nBZbbJePs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079873fd",
+   "metadata": {},
+   "source": [
+    "Verify video source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38962f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -l ../../video-src"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c97bfb74",
+   "metadata": {},
+   "source": [
+    "Expected source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt\n",
+    "- set type=3\n",
+    "\n",
+    "- set uri=../../../video-src/\\<video_file>\n"
    ]
   },
   {
@@ -146,7 +237,7 @@
    "metadata": {},
    "source": [
     "### Writing the config file in notebook\n",
-    "Run the below cell, replace the first line (# %load samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt) with **%%writefile samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt** at the beginning of the cell after edit"
+    "Run the below cell, replace the first line (**# %load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt**) with **%%writefile ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt** at the beginning of the cell after edit"
    ]
   },
   {
@@ -156,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "%load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
    ]
   },
   {
@@ -182,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "cat ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
    ]
   },
   {
@@ -244,7 +335,7 @@
    "metadata": {},
    "source": [
     "### Writing the config file in notebook\n",
-    "Run the below cell, replace the first line (# %load samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt) with **%%writefile samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt** at the beginning of the cell after edit"
+    "Run the below cell, replace the first line (**# %load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt**) with **%%writefile ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt** at the beginning of the cell after edit"
    ]
   },
   {
@@ -254,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "%load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
    ]
   },
   {
@@ -280,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd samples/configs/tlt_pretrained_models && \\\n",
+    "!cd ../../samples/configs/tlt_pretrained_models && \\\n",
     "    deepstream-app -c deepstream_app_source1_peoplenet.txt"
    ]
   },
