--- a/notebook/deepstream-rtsp-out.ipynb
+++ b/notebook/deepstream-rtsp-out.ipynb
@@ -13,46 +13,7 @@
    "id": "0420073a",
    "metadata": {},
    "source": [
-    "This notebooks guides you through the procedures to run PeopleNet running inference on 4K videos with DeepStream and minimal configurations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dba08a07",
-   "metadata": {},
-   "source": [
-    "## 1. Download Model Files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f460778f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cd ../../samples/configs/tlt_pretrained_models && \\\n",
-    "    mkdir -p ../../models/tlt_pretrained_models/peoplenet && \\\n",
-    "    wget https://api.ngc.nvidia.com/v2/models/nvidia/tlt_peoplenet/versions/pruned_v2.0/files/resnet34_peoplenet_pruned.etlt \\\n",
-    "    -O ../../models/tlt_pretrained_models/peoplenet/resnet34_peoplenet_pruned.etlt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08675ec2",
-   "metadata": {},
-   "source": [
-    "Verify model files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21e7e7f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ls -l ../../samples/models/tlt_pretrained_models"
+    "This notebooks guides you through the procedures to use DeepStream for RTSP Streaming"
    ]
   },
   {
@@ -60,28 +21,7 @@
    "id": "b4259d5b",
    "metadata": {},
    "source": [
-    "## 2. Source configurations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5eec106e",
-   "metadata": {},
-   "source": [
-    "You can select 1) RTSP or 2) prepared videos in the container to run inference on with DeepStream.\n",
-    "Refer to https://docs.nvidia.com/metropolis/deepstream/dev-guide/text/DS_ref_app_deepstream.html#source-group for more details.\n",
-    "\n",
-    "Configure samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2456ef79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "## 1. Source configurations"
    ]
   },
   {
@@ -89,7 +29,7 @@
    "id": "47ef6d45",
    "metadata": {},
    "source": [
-    "### 2.1 RTSP Source"
+    "### 1.1 RTSP Source"
    ]
   },
   {
@@ -97,12 +37,10 @@
    "id": "9422150e",
    "metadata": {},
    "source": [
-    "Expected source0 group \n",
+    "Expected source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt:\n",
     "- set type=4\n",
-    "- set uri=rtsp://\\<ip>:\\<host>/path      \n",
     "\n",
-    "Expected streammux group \n",
-    "- set live-source=1"
+    "- set uri=rtsp://\\<ip>:\\<host>/path      \n"
    ]
   },
   {
@@ -118,7 +56,7 @@
    "id": "1d98807a",
    "metadata": {},
    "source": [
-    "### 2.2 4K Videos in the container"
+    "### 1.2 4K Videos in the container"
    ]
   },
   {
@@ -227,10 +165,10 @@
    "id": "c97bfb74",
    "metadata": {},
    "source": [
-    "Expected source0 group\n",
+    "Expected source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt\n",
     "- set type=3\n",
     "\n",
-    "- set uri=../../../video-src/\\<video_file>\n"
+    "- set uri=../video-src/\\<video_file>\n"
    ]
   },
   {
@@ -239,9 +177,17 @@
    "metadata": {},
    "source": [
     "### Writing the config file in notebook\n",
-    "- Run the below cell \n",
-    "- Replace the first line (**# %load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt**) with **%%writefile ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt** at the beginning of the cell after edit\n",
-    "- Run it again"
+    "Edit the below cell, run the cell after edit and save the file to **../../app-src/deepstream_app_rtsp_source.txt**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a7169b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir ../../app-src"
    ]
   },
   {
@@ -251,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt\n",
+    "%%writefile ../../app-src/deepstream_app_rtsp_source.txt\n",
     "################################################################################\n",
     "# Copyright (c) 2020, NVIDIA CORPORATION. All rights reserved.\n",
     "#\n",
@@ -289,19 +235,18 @@
     "[source0]\n",
     "enable=1\n",
     "#Type - 1=CameraV4L2 2=URI 3=MultiURI\n",
-    "type=4\n",
+    "type=3\n",
     "num-sources=1\n",
-    "uri=rtsp://127.0.0.1:8554/ds-test\n",
+    "uri=file://../video-src/hk_4k.webm\n",
     "gpu-id=0\n",
     "\n",
     "[streammux]\n",
     "gpu-id=0\n",
     "batch-size=1\n",
-    "live-source=1\n",
     "batched-push-timeout=40000\n",
     "## Set muxer output width and height\n",
-    "width=1920\n",
-    "height=1080\n",
+    "width=3840\n",
+    "height=2160\n",
     "\n",
     "[sink0]\n",
     "enable=1\n",
@@ -312,27 +257,10 @@
     "gpu-id=0\n",
     "\n",
     "[osd]\n",
-    "enable=1\n",
-    "gpu-id=0\n",
-    "border-width=3\n",
-    "text-size=15\n",
-    "text-color=1;1;1;1;\n",
-    "text-bg-color=0.3;0.3;0.3;1\n",
-    "font=Arial\n",
+    "enable=0\n",
     "\n",
     "[primary-gie]\n",
-    "enable=1\n",
-    "gpu-id=0\n",
-    "# Modify as necessary\n",
-    "model-engine-file=../../models/tlt_pretrained_models/peoplenet/resnet34_peoplenet_pruned.etlt_b1_gpu0_fp16.engine\n",
-    "batch-size=1\n",
-    "#Required by the app for OSD, not a plugin property\n",
-    "bbox-border-color0=1;0;0;1\n",
-    "bbox-border-color1=0;1;1;1\n",
-    "bbox-border-color2=0;0;1;1\n",
-    "bbox-border-color3=0;1;0;1\n",
-    "gie-unique-id=1\n",
-    "config-file=config_infer_primary_peoplenet.txt\n",
+    "enable=0\n",
     "\n",
     "[sink1]\n",
     "enable=0\n",
@@ -360,27 +288,16 @@
     "#encoder type 0=Hardware 1=Software\n",
     "enc-type=0\n",
     "sync=0\n",
-    "bitrate=4000000\n",
+    "bitrate=8000000\n",
     "#H264 Profile - 0=Baseline 2=Main 4=High\n",
     "#H265 Profile - 0=Main 1=Main10\n",
-    "profile=0\n",
+    "profile=4\n",
     "# set below properties in case of RTSPStreaming\n",
-    "rtsp-port=8555\n",
-    "udp-port=5401\n",
+    "rtsp-port=8554\n",
+    "udp-port=5400\n",
     "\n",
     "[tracker]\n",
-    "enable=1\n",
-    "tracker-width=640\n",
-    "tracker-height=384\n",
-    "#ll-lib-file=/opt/nvidia/deepstream/deepstream-5.1/lib/libnvds_mot_iou.so\n",
-    "#ll-lib-file=/opt/nvidia/deepstream/deepstream-5.1/lib/libnvds_nvdcf.so\n",
-    "ll-lib-file=/opt/nvidia/deepstream/deepstream-5.1/lib/libnvds_mot_klt.so\n",
-    "#ll-config-file required for DCF/IOU only\n",
-    "ll-config-file=../deepstream-app/tracker_config.yml\n",
-    "#ll-config-file=iou_config.txt\n",
-    "gpu-id=0\n",
-    "#enable-batch-process applicable to DCF only\n",
-    "enable-batch-process=1\n",
+    "enable=0\n",
     "\n",
     "[tests]\n",
     "file-loop=0\n"
@@ -391,7 +308,7 @@
    "id": "792ddd13",
    "metadata": {},
    "source": [
-    "## 3. Sink (Output) Configurations"
+    "## 2. Sink (Output) Configurations"
    ]
   },
   {
@@ -409,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "cat ../../app-src/deepstream_app_rtsp_source.txt"
    ]
   },
   {
@@ -417,7 +334,7 @@
    "id": "3a2189d4",
    "metadata": {},
    "source": [
-    "### 3.1 Graphical Application"
+    "### 2.1 Graphical Application"
    ]
   },
   {
@@ -433,7 +350,7 @@
    "id": "fd40d40e",
    "metadata": {},
    "source": [
-    "### 3.2 Saved output file"
+    "### 2.2 Saved output file"
    ]
   },
   {
@@ -451,7 +368,7 @@
    "id": "c017fbf1",
    "metadata": {},
    "source": [
-    "### 3.3 RTSP"
+    "### 2.3 RTSP"
    ]
   },
   {
@@ -460,9 +377,7 @@
    "metadata": {},
    "source": [
     "To view DeepStream streaming via RTSP, under sink2 group\n",
-    "- set enable=1 \n",
-    "- set rtsp=8555\n",
-    "- set udp=5401"
+    "- set enable=1 "
    ]
   },
   {
@@ -471,9 +386,10 @@
    "metadata": {},
    "source": [
     "### Writing the config file in notebook\n",
-    "- Run the below cell \n",
-    "- Replace the first line (**# %load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt**) with **%%writefile ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt** at the beginning of the cell after edit\n",
-    "- Run it again"
+    "- Run the below cell\n",
+    "- Edit the below cell\n",
+    "- After edit, replace first line (**# %load ../../app-src/deepstream_app_rtsp_source.txt**) with **%%writefile ../../app-src/deepstream_app_rtsp_source.txt**\n",
+    "- Run the cell after edit to save the file to **../../app-src/deepstream_app_rtsp_source.txt**"
    ]
   },
   {
@@ -483,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
+    "%load ../../app-src/deepstream_app_rtsp_source.txt"
    ]
   },
   {
@@ -491,7 +407,7 @@
    "id": "2ec627ad",
    "metadata": {},
    "source": [
-    "## 4. Run DeepStream"
+    "## 3. Run DeepStream"
    ]
   },
   {
@@ -509,8 +425,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../../samples/configs/tlt_pretrained_models && \\\n",
-    "    deepstream-app -c deepstream_app_source1_peoplenet.txt"
+    "!cd ../../app-src && \\\n",
+    "    deepstream-app -c deepstream_app_rtsp_source.txt"
    ]
   },
   {
