--- a/notebook/deepstream-rtsp-out.ipynb
+++ b/notebook/deepstream-rtsp-out.ipynb
@@ -37,18 +37,10 @@
    "id": "9422150e",
    "metadata": {},
    "source": [
-    "Expected source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt:\n",
+    "Expected source0 group from DeepStream application configuration file:\n",
     "- set type=4\n",
     "\n",
     "- set uri=rtsp://\\<ip>:\\<host>/path      \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce63da96",
-   "metadata": {},
-   "source": [
-    "You may also create another DeepStream Container to simulate RTSP source. Please refer to deepstream-rtsp-out.ipynb"
    ]
   },
   {
@@ -61,38 +53,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d645e58e",
-   "metadata": {},
-   "source": [
-    "Create video source folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccdd1980",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir ../../video-src"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a250ed47",
    "metadata": {},
    "source": [
-    "You may download 4K videos from YouTube"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b32dabb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install youtube-dl"
+    "You may use your own videos download 4K videos from YouTube"
    ]
   },
   {
@@ -100,9 +64,20 @@
    "id": "c66e6ac0",
    "metadata": {},
    "source": [
-    "In this demo, we choose 2 4K videos which shot amazing street views in Hong Kong\n",
+    "In this demo, we prepared 3 4K videos\n",
     "- https://www.youtube.com/watch?v=gYO1uk7vIcc\n",
-    "- https://www.youtube.com/watch?v=V8nBZbbJePs"
+    "- https://www.youtube.com/watch?v=V8nBZbbJePs\n",
+    "- https://www.youtube.com/watch?v=eeBnpgWH2vQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5dbd54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -l ../../video-src"
    ]
   },
   {
@@ -110,7 +85,7 @@
    "id": "22ef56bc",
    "metadata": {},
    "source": [
-    "To check the formats for those videos:"
+    "If you wish to download by yourself, we check the formats for YouTube videos:"
    ]
   },
   {
@@ -128,7 +103,9 @@
    "id": "c6e07bd5",
    "metadata": {},
    "source": [
-    "We will download vp9 formatted 4K video (313) as av01 formatted video is not supported on DeepStream."
+    "We will download vp9 formatted 4K video as av01 formatted video is not supported on DeepStream.\n",
+    "\n",
+    "Modify -f flag and YouTube link with reference to previous cell output"
    ]
   },
   {
@@ -165,7 +142,7 @@
    "id": "c97bfb74",
    "metadata": {},
    "source": [
-    "Expected source0 group from samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt\n",
+    "Expected source0 group from DeepStream application configuration file:\n",
     "- set type=3\n",
     "\n",
     "- set uri=../video-src/\\<video_file>\n"
