--- a/notebook/peoplenet-demo.ipynb
+++ b/notebook/peoplenet-demo.ipynb
@@ -123,38 +123,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d645e58e",
-   "metadata": {},
-   "source": [
-    "Create video source folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccdd1980",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir ../../video-src"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a250ed47",
    "metadata": {},
    "source": [
-    "You may download 4K videos from YouTube"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b32dabb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install youtube-dl"
+    "You may use your own videos download 4K videos from YouTube"
    ]
   },
   {
@@ -162,17 +134,28 @@
    "id": "c66e6ac0",
    "metadata": {},
    "source": [
-    "In this demo, we choose 2 4K videos which shot amazing street views in Hong Kong\n",
+    "In this demo, we prepared 3 4K videos\n",
     "- https://www.youtube.com/watch?v=gYO1uk7vIcc\n",
-    "- https://www.youtube.com/watch?v=V8nBZbbJePs"
+    "- https://www.youtube.com/watch?v=V8nBZbbJePs\n",
+    "- https://www.youtube.com/watch?v=eeBnpgWH2vQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47668d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -l ../../video-src"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22ef56bc",
+   "id": "53829e98",
    "metadata": {},
    "source": [
-    "To check the formats for those videos:"
+    "If you wish to download by yourself, we check the formats for YouTube videos:"
    ]
   },
   {
@@ -190,7 +173,9 @@
    "id": "c6e07bd5",
    "metadata": {},
    "source": [
-    "We will download vp9 formatted 4K video (313) as av01 formatted video is not supported on DeepStream."
+    "We will download vp9 formatted 4K video as av01 formatted video is not supported on DeepStream.\n",
+    "\n",
+    "Modify -f flag and YouTube link with reference to previous cell output"
    ]
   },
   {
@@ -251,139 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt\n",
-    "################################################################################\n",
-    "# Copyright (c) 2020, NVIDIA CORPORATION. All rights reserved.\n",
-    "#\n",
-    "# Permission is hereby granted, free of charge, to any person obtaining a\n",
-    "# copy of this software and associated documentation files (the \"Software\"),\n",
-    "# to deal in the Software without restriction, including without limitation\n",
-    "# the rights to use, copy, modify, merge, publish, distribute, sublicense,\n",
-    "# and/or sell copies of the Software, and to permit persons to whom the\n",
-    "# Software is furnished to do so, subject to the following conditions:\n",
-    "#\n",
-    "# The above copyright notice and this permission notice shall be included in\n",
-    "# all copies or substantial portions of the Software.\n",
-    "#\n",
-    "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
-    "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
-    "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL\n",
-    "# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
-    "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING\n",
-    "# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER\n",
-    "# DEALINGS IN THE SOFTWARE.\n",
-    "################################################################################\n",
-    "\n",
-    "[application]\n",
-    "enable-perf-measurement=1\n",
-    "perf-measurement-interval-sec=1\n",
-    "\n",
-    "[tiled-display]\n",
-    "enable=1\n",
-    "rows=1\n",
-    "columns=1\n",
-    "width=1280\n",
-    "height=720\n",
-    "gpu-id=0\n",
-    "\n",
-    "[source0]\n",
-    "enable=1\n",
-    "#Type - 1=CameraV4L2 2=URI 3=MultiURI\n",
-    "type=4\n",
-    "num-sources=1\n",
-    "uri=rtsp://127.0.0.1:8554/ds-test\n",
-    "gpu-id=0\n",
-    "\n",
-    "[streammux]\n",
-    "gpu-id=0\n",
-    "batch-size=1\n",
-    "live-source=1\n",
-    "batched-push-timeout=40000\n",
-    "## Set muxer output width and height\n",
-    "width=1920\n",
-    "height=1080\n",
-    "\n",
-    "[sink0]\n",
-    "enable=1\n",
-    "#Type - 1=FakeSink 2=EglSink 3=File\n",
-    "type=1\n",
-    "sync=1\n",
-    "source-id=0\n",
-    "gpu-id=0\n",
-    "\n",
-    "[osd]\n",
-    "enable=1\n",
-    "gpu-id=0\n",
-    "border-width=3\n",
-    "text-size=15\n",
-    "text-color=1;1;1;1;\n",
-    "text-bg-color=0.3;0.3;0.3;1\n",
-    "font=Arial\n",
-    "\n",
-    "[primary-gie]\n",
-    "enable=1\n",
-    "gpu-id=0\n",
-    "# Modify as necessary\n",
-    "model-engine-file=../../models/tlt_pretrained_models/peoplenet/resnet34_peoplenet_pruned.etlt_b1_gpu0_fp16.engine\n",
-    "batch-size=1\n",
-    "#Required by the app for OSD, not a plugin property\n",
-    "bbox-border-color0=1;0;0;1\n",
-    "bbox-border-color1=0;1;1;1\n",
-    "bbox-border-color2=0;0;1;1\n",
-    "bbox-border-color3=0;1;0;1\n",
-    "gie-unique-id=1\n",
-    "config-file=config_infer_primary_peoplenet.txt\n",
-    "\n",
-    "[sink1]\n",
-    "enable=0\n",
-    "type=3\n",
-    "#1=mp4 2=mkv\n",
-    "container=1\n",
-    "#1=h264 2=h265 3=mpeg4\n",
-    "codec=1\n",
-    "#encoder type 0=Hardware 1=Software\n",
-    "enc-type=0\n",
-    "sync=0\n",
-    "bitrate=2000000\n",
-    "#H264 Profile - 0=Baseline 2=Main 4=High\n",
-    "#H265 Profile - 0=Main 1=Main10\n",
-    "profile=0\n",
-    "output-file=out.mp4\n",
-    "source-id=0\n",
-    "\n",
-    "[sink2]\n",
-    "enable=1\n",
-    "#Type - 1=FakeSink 2=EglSink 3=File 4=RTSPStreaming 5=Overlay\n",
-    "type=4\n",
-    "#1=h264 2=h265\n",
-    "codec=1\n",
-    "#encoder type 0=Hardware 1=Software\n",
-    "enc-type=0\n",
-    "sync=0\n",
-    "bitrate=4000000\n",
-    "#H264 Profile - 0=Baseline 2=Main 4=High\n",
-    "#H265 Profile - 0=Main 1=Main10\n",
-    "profile=0\n",
-    "# set below properties in case of RTSPStreaming\n",
-    "rtsp-port=8555\n",
-    "udp-port=5401\n",
-    "\n",
-    "[tracker]\n",
-    "enable=1\n",
-    "tracker-width=640\n",
-    "tracker-height=384\n",
-    "#ll-lib-file=/opt/nvidia/deepstream/deepstream-5.1/lib/libnvds_mot_iou.so\n",
-    "#ll-lib-file=/opt/nvidia/deepstream/deepstream-5.1/lib/libnvds_nvdcf.so\n",
-    "ll-lib-file=/opt/nvidia/deepstream/deepstream-5.1/lib/libnvds_mot_klt.so\n",
-    "#ll-config-file required for DCF/IOU only\n",
-    "ll-config-file=../deepstream-app/tracker_config.yml\n",
-    "#ll-config-file=iou_config.txt\n",
-    "gpu-id=0\n",
-    "#enable-batch-process applicable to DCF only\n",
-    "enable-batch-process=1\n",
-    "\n",
-    "[tests]\n",
-    "file-loop=0\n"
+    "%load ../../samples/configs/tlt_pretrained_models/deepstream_app_source1_peoplenet.txt"
    ]
   },
   {
