--- a/notebook/deepstream-rtsp-out.ipynb
+++ b/notebook/deepstream-rtsp-out.ipynb
@@ -66,8 +66,11 @@
    "source": [
     "In this demo, we prepared 3 4K videos\n",
     "- https://www.youtube.com/watch?v=gYO1uk7vIcc\n",
+    "    video dim: 3840x2044 ; fps: 25 ; Drome shooting in HK\n",
     "- https://www.youtube.com/watch?v=V8nBZbbJePs\n",
-    "- https://www.youtube.com/watch?v=eeBnpgWH2vQ"
+    "    video dim: 3840x2160 ; fps: 30 ; Perspective view from car in HK\n",
+    "- https://www.youtube.com/watch?v=eeBnpgWH2vQ\n",
+    "    video dim: 3840x2160 ; fps: 60 ; Walking in Stockholm"
    ]
   },
   {
@@ -95,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!youtube-dl -F https://www.youtube.com/watch?v=V8nBZbbJePs"
+    "!youtube-dl -F https://www.youtube.com/watch?v=eeBnpgWH2vQ"
    ]
   },
   {
@@ -105,7 +108,7 @@
    "source": [
     "We will download vp9 formatted 4K video as av01 formatted video is not supported on DeepStream.\n",
     "\n",
-    "Modify -f flag and YouTube link with reference to previous cell output"
+    "Modify -f flag (formatted code) and YouTube link with reference to previous cell output"
    ]
   },
   {
@@ -145,7 +148,12 @@
     "Expected source0 group from DeepStream application configuration file:\n",
     "- set type=3\n",
     "\n",
-    "- set uri=../video-src/\\<video_file>\n"
+    "- set uri=../video-src/\\<video_file>\n",
+    "\n",
+    "Expected streammux group from DeepStream application configuration file:\n",
+    "- set width = \\<video-width>\n",
+    "\n",
+    "- set height = \\<video-height>"
    ]
   },
   {
