--- a/notebook/peoplenet-demo.ipynb
+++ b/notebook/peoplenet-demo.ipynb
@@ -136,8 +136,11 @@
    "source": [
     "In this demo, we prepared 3 4K videos\n",
     "- https://www.youtube.com/watch?v=gYO1uk7vIcc\n",
+    "    video dim: 3840x2044 ; fps: 25 ; Drome shooting in HK\n",
     "- https://www.youtube.com/watch?v=V8nBZbbJePs\n",
-    "- https://www.youtube.com/watch?v=eeBnpgWH2vQ"
+    "    video dim: 3840x2160 ; fps: 30 ; Perspective view from car in HK\n",
+    "- https://www.youtube.com/watch?v=eeBnpgWH2vQ\n",
+    "    video dim: 3840x2160 ; fps: 60 ; Walking in Stockholm"
    ]
   },
   {
@@ -175,7 +178,7 @@
    "source": [
     "We will download vp9 formatted 4K video as av01 formatted video is not supported on DeepStream.\n",
     "\n",
-    "Modify -f flag and YouTube link with reference to previous cell output"
+    "Modify -f flag (formatted code) and YouTube link with reference to previous cell output"
    ]
   },
   {
